# gf-back

./: .env.template  .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 2c95d004ef94_added_tmp_tables_and_fixed_relationships.py  47e75e17e8a2_add_old_tables.py  5f547a4f75d2_renamed_datetime_column.py  88b395c5292c_initial.py
src/: config.py  main.py
src/api/: __init__.py
src/api/v1/: __init__.py  client.py  scraper.py
src/database/: database.py  database_manager.py  models.py
src/schemas/: __init__.py  group.py  institute.py  student.py
src/scraper/: run.py
src/scraper/reports/json/: 2024-11-26.json
src/scraper/reports/txt/: 2024-11-26.txt
