[tool.poetry]
name = "gf-back"
version = "0.1.0"
description = ""
authors = ["blatmen23 <dindilon2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standart"], version = "^0.115.12"}
pydantic = "^2.11.3"
pydantic-settings = "^2.9.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.40"}
alembic = "^1.15.2"
asyncpg = "^0.30.0"
uvicorn = "^0.34.2"
fake-useragent = "^2.2.0"
aiohttp = "^3.11.18"
bs4 = "^0.0.2"
aiohttp-socks = "^0.10.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
